# primecountpy

./: .gitignore  .readthedocs.yaml  AUTHORS  CMakeLists.txt  MANIFEST.in  README.md  meson.build  primecount.cpp  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-sage-cygwin.yml  ci-sage-debian.yml  ci-sage-linux.yml  ci-sage-macos.yml  ci-sage.yml  ci.yml  dist.yml  wheels.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  installation.md
docs/source/modules/: primecountpy.primecount.rst
primecount/: primecount.pyx
primecountpy/: __init__.py  defs.pxd  primecount.pyx
src/primecountpy/: defs.pxd  primecount.pyx
subprojects/: primecount.wrap
