[build-system]
requires = ["meson-python>=0.16.0", "Cython>=3.0", "cysignals"]
build-backend = "mesonpy"

[project]
name = "primecountpy"
version = "0.1.1"
description = "Cython interface for C++ primecount library"
authors = [
    { name = "SageMath Developers", email = "sage-devel@googlegroups.com" },
]
dependencies = ["cysignals"]
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/dimpase/primecountpy"
"User Manual" = "https://primecountpy.readthedocs.io"
"Bug Tracker" = "https://github.com/dimpase/primecountpy/issues"
