[build-system]
requires = ["meson-python>=0.16.0", "Cython>=3.0", "cysignals"]
build-backend = "mesonpy"

[project]
name = "primecountpy"
version = "0.1.1"
description = "Cython interface for C++ primecount library"
authors = [
    { name = "SageMath Developers", email = "sage-devel@googlegroups.com" },
]
dependencies = ["cysignals"]
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/dimpase/primecountpy"
"User Manual" = "https://primecountpy.readthedocs.io"
"Bug Tracker" = "https://github.com/dimpase/primecountpy/issues"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "cibuildwheel>=2.23.3",
    "cython>=3.1.4",
    "cysignals>=1.11.2",
    "meson>=1.9.0",
    "meson-python>=0.18.0",
    "ninja>=1.13.0",
    "pkgconf>=2.4.3.post2",
    "pytest>=8.4.2",
    "pytest-cython>=0.3.0",
]

[tool.meson-python.args]
# Don't install subprojects and ensure that targets are built as static
# as per https://mesonbuild.com/meson-python/how-to-guides/shared-libraries.html#static-library-from-subproject
setup = ['--default-library=static']
install = ['--skip-subprojects']
